--- a/UI/styles/sign-in.css
+++ b/UI/styles/sign-in.css
@@ -19,13 +19,42 @@ body{
 a{
     text-decoration: none;
 }
+nav{
+    background-color: rgba(5, 119, 181, 0.787);
+}
+nav ul{
+    list-style-type: none;
+    margin: 0;
+}
+nav .logo{
+    color: #FDCC05;
+    font-size: 4rem;
+    font-weight: bold;
+    display: inline;
+}
+nav .nav-item{
+    float: right;
+    margin: 1rem;
+}
+nav .nav-item button{
+    background-color: #FDCC05;
+    width: 10rem;
+    height: 3rem;
+    border: none;
+    border-radius: 1rem;
+    color: #fff;
+    font-size: 1.5rem;
+}
+nav .nav-item button:hover{
+    background-color: #252326;
+}
 .main{
     width: 40rem;
     margin: 0 auto 3rem auto;
 }
 .main h1{
     text-decoration: none;
-    color: #FDCC05;
+    /* color: #FDCC05; */
     font-size: 4rem;
     font-weight: bold;
     text-align: center;
