feat(design/template): make changes to nav bar button
-change the color of the text in the button

[delivers #163418388]

--- a/UI/styles/sign-in.css
+++ b/UI/styles/sign-in.css
@@ -42,7 +42,7 @@ nav .nav-item button{
     height: 3rem;
     border: none;
     border-radius: 1rem;
-    color: #fff;
+    color: black;
     font-size: 1.5rem;
 }
 nav .nav-item button:hover{
