feat(design/template): change color of button in home page
-change the color of call to action button

[delivers #163420702]

--- a/UI/styles/home.css
+++ b/UI/styles/home.css
@@ -92,7 +92,7 @@ button{
     margin: auto 0 auto 2rem;
 }
 #container > .description > .description-text button{
-    background-color: #00784A;
+    background-color: #3791C2;
     width: 15rem;
     height: 5rem;
     border: none;
