--- a/UI/styles/parties.css
+++ b/UI/styles/parties.css
@@ -117,7 +117,7 @@ h1{
     height: 4rem;
     width: 9rem;
     background-color: #3791C2;
-    color: black;
+    color: white;
     font-size: 1.3rem;
     border-radius: 7px;
     border: none;
