--- a/UI/styles/create-party.css
+++ b/UI/styles/create-party.css
@@ -132,6 +132,7 @@ nav .nav-item button:hover{
 .main .submit-button{
     background-color: #3490c2;
     cursor: pointer;
+    color: white;
 }
 .main .alt-button{
     cursor: pointer;
