--- a/UI/styles/profile.css
+++ b/UI/styles/profile.css
@@ -160,7 +160,7 @@ footer{
         padding-top: 1rem;
         position: absolute;
         width: 20rem;
-        height: 100vh;
+        height: 90%;
         top: 5rem;
         display: none;
     }
