--- a/UI/styles/offices.css
+++ b/UI/styles/offices.css
@@ -165,7 +165,7 @@ footer{
         padding-top: 1rem;
         position: absolute;
         width: 20rem;
-        height: 100vh;
+        height: 90%;
         top: 5rem;
         display: none;
     }
