feat(design/template): Link pages together
-navigate from one page to the other

[delivers #163473551]

--- a/UI/styles/home.css
+++ b/UI/styles/home.css
@@ -26,6 +26,9 @@ img{
 button{
     cursor: pointer;
 }
+button a{
+    color: inherit;
+}
 #jumbotrun{
     background: linear-gradient(
         rgba(5, 119, 181, 0.808),
