--- a/UI/styles/create-party.css
+++ b/UI/styles/create-party.css
@@ -74,6 +74,9 @@ nav .nav-item button:hover{
 #side-bar .menu-item:hover{
     background-color: gray;
 }
+.active{
+    background-color: gray;
+}
 #form-area{
     grid-area: m;
     max-width: 130rem;
@@ -89,6 +92,13 @@ nav .nav-item button:hover{
 #form-area > i{
     float: right;
     margin: 1.2rem 2rem;
+    display: none;
+    display: block;
+    display: none;
+}
+#form-area > .fas{
+    display: none;
+    display: block;
     display: none;
 }
 .main{
@@ -162,6 +172,11 @@ footer{
     z-index: 100;
 }
 
+@media (min-width: 769px) {
+    #form-area > .fas{
+        display: none !important;
+    }
+}
 @media (max-width: 768px) {
     body{
         grid-template-areas: 
@@ -180,7 +195,7 @@ footer{
         top: 5rem;
         display: none;
     }
-    #form-area > i{
+    #form-area > .fa-bars{
         display: block;
     }
 } 
