--- a/UI/styles/profile.css
+++ b/UI/styles/profile.css
@@ -146,6 +146,58 @@ footer{
     text-align: center;
     padding: 1rem 0;
 }
+.active{
+    background-color: gray;
+}
+#new-menu-items{
+    margin: 40px auto;
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+#one-party{
+    height: 25rem;
+    width: 22rem;
+    box-shadow: 0 .3rem .5rem #888888;
+    margin: 0 3rem 4rem 0;
+}
+#one-party > #one-party-pic{
+    height: 150px;
+    width: 220px;
+}
+#one-party > #one-party-pic img{
+    width: 220px;
+    height: 150px;
+}
+#one-party > #one-party-text{
+    margin: 10px;
+}
+#one-party > #one-party-text h3{
+    font-size: 1.5rem;
+}
+#one-party-text > span{
+    font-size: 12px;
+    position: relative;
+    top: -10px;
+}
+#one-party-text > button{
+    height: 4rem;
+    width: 9rem;
+    background-color: #3791C2;
+    color: white;
+    font-size: 1.3rem;
+    border-radius: 7px;
+    border: none;
+    float: left;
+}
+#one-party-text > .edit-party{
+    margin-right: 2rem;
+}
+#one-party-text > button:hover{
+    background-color: black;
+    color: white;
+}
 
 @media (min-width: 769px) {
     #user-details > .fas{
@@ -173,3 +225,9 @@ footer{
         display: block;
     }
 }
+@media (max-width: 270px) {
+    nav .nav-item button{
+        display: none;
+    }
+}
+
