--- a/UI/styles/create-party.css
+++ b/UI/styles/create-party.css
@@ -53,6 +53,7 @@ nav .nav-item button{
     border-radius: 1rem;
     color: black;
     font-size: 1.5rem;
+    cursor: pointer;
 }
 nav .nav-item button:hover{
     background-color: #252326;
