--- a/UI/styles/offices.css
+++ b/UI/styles/offices.css
@@ -138,6 +138,7 @@ nav .nav-item button:hover{
     border-radius: 1rem;
     border: none;
     cursor: pointer;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 #offices > .one-office .candidates form .vote-button:hover{
