feat(Front-end): make calls to server with fetch API
- post sign up and sign in data to server
- store token on success in local storage

[delivers #163723301]

--- a/UI/styles/sign-in.css
+++ b/UI/styles/sign-in.css
@@ -79,6 +79,24 @@ nav .nav-item button:hover{
     width: 75%;
     margin: 0 auto;
 }
+.main .result-div{
+    width: 30rem;
+    padding: 1rem;
+    background-color: skyblue;
+    border-radius: .5rem;
+    border: 1px solid grey;
+    margin: .5rem 0 1.5rem 0;
+    font-size: 1.4rem;
+    display: none;
+}
+.main .loading{
+    margin: 0rem 0 .7rem 0;
+}
+.loading>img{
+    height: 45px;
+    width: 45px;
+    display: none;
+}
 .main label{
     font-size: 1.3rem;
     font-weight: bold;
