--- a/UI/styles/profile.css
+++ b/UI/styles/profile.css
@@ -26,6 +26,20 @@ body{
     grid-template-rows: 5rem 1fr 4rem;
     font-size: 1.6rem; 
 }
+#parties-result{
+    width: 70%;
+    position: fixed;
+    text-align: center;
+    margin: 0 15%;
+    padding: 6px 0;
+    display: none;
+    color: black;
+    background-color:yellowgreen;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    z-index: 999;
+}
 button{
     cursor: pointer;
 }
